# Chirpie

./: .env  .env.example  README.md  docker-compose.yml
backend/: Cargo.toml
backend/src/: database.rs  main.rs
frontend/: package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  main.tsx  vite-env.d.ts
