[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-governor = "0.4"
mongodb = "2.5"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
futures = "0.3"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "8"
dotenvy = "0.15"
thiserror = "1"
env_logger = "0.10"
